Agregue btn wsp, modifique las imagenes, termine plomeria, electricidad, sobre nosotros y contacto

--- a/electricidad.html
+++ b/electricidad.html
@@ -30,6 +30,7 @@
                     <p class="text-menu">Hormigón</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/hormigon.html"><b>Hormigón</b></a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#losas">Losas</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#encadenado">Encadenados</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#vigas">Vigas</a></li>
@@ -48,6 +49,7 @@
                     <p class="text-menu">Herrería</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/herreria.html"><b>Herrería</b></a></li>
                     <li><a class="dropdown-item" href="/herreria.html#portones">Portones</a></li>
                     <li><a class="dropdown-item" href="/herreria.html#rejas">Rejas</a></li>
                     <li><a class="dropdown-item" href="/herreria.html#escaleras">Escaleras</a></li>
@@ -64,6 +66,7 @@
                     <p class="text-menu">Techos</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/techos.html"><b>Techos</b></a></li>
                     <li><a class="dropdown-item" href="/techos.html#tejas">Teja</a></li>
                     <li><a class="dropdown-item" href="/techos.html#chapa">Chapa</a></li>
                 </ul>
@@ -75,6 +78,7 @@
                     <p class="text-menu">Pintura</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/pintura.html"><b>Pintura</b></a></li>
                     <li><a class="dropdown-item" href="/pintura.html#exterior">Exterior</a></li>
                     <li><a class="dropdown-item" href="/pintura.html#interior">Interior</a></li>
                     <li><a class="dropdown-item" href="/pintura.html#impermeabilizacion">Impermeabilización</a></li>
@@ -88,7 +92,7 @@
                     <p class="text-menu">Plomería</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/plomeria.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html"><b>Plomería</b></a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#tanques">Tanques</a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#cisternas">Cisternas</a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#centrifugas">Bombas Centrifugas</a></li>
@@ -109,7 +113,7 @@
                     <p class="text-menu">Electricidad</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/electricidad.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html"><b>Electricidad</b></a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#luminarias">Luminarias</a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#tomas">Toma Corriente</a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#tableros">Tableros</a></li>
@@ -188,101 +192,101 @@
 
     <!-- <<< ----------- * ----------- Fin Header Celular ----------- * ----------- >>> -->
     <main>
-        <div class="container">
+        <div class="w-100">
+            <div class="container">
 
+                <h1 class="centrado mrt30">Electricidad</h1>
 
-            <!-- Presentación -->
-            <h1 class="centrado mrt30">Electricidad</h1>
+                <!-- Presentación -->
+                <div class="cont-presentacion">
 
-            <!-- Imagen Principal -->
-            <div class="centrado mrt30">
-                <img class="img-principal" src="/img/electricidad.jpg" alt="img-principal">
-            </div>
-            <!-- Fin Imagen Principal -->
+                    <!-- Imagen Principal -->
+                    <div class="centrado mrt30">
+                        <img class="img-principal" src="/img/electricidad.jpg" alt="img-principal">
+                    </div>
+                    <!-- Fin Imagen Principal -->
 
-            <h2 class="centrado mrt30">Trabajamos con diseño propio y Garantía Escrita</h2>
+                    <div class="presentacion mrt30">
+                        <h5 class="text-indent justify">En <b>LFConstrucciones</b>, contamos con Electricistas altamente
+                            capacitados en la <b>Instalación de Luminarias, Toma Corrientes, Tableros, Porteros
+                                Electricos, Termo Tanques</b>, además de <b>Instalaciones de Ventiladores de Techo y
+                                Aires Acondicionados.</b> Contamos con más de
+                            10 años de experiencia en el rubro.</h5>
+                        <br>
+                        <h5 class="text-indent justify">Nuestro equipo altamente capacitado y el uso de materiales
+                            de
+                            alta calidad nos permiten ofrecer un servicio superior, garantizando los más altos
+                            estándares
+                            de
+                            calidad.</h5>
+                        <br>
+                        <h5 class="text-indent justify"><b>Ante cualquier duda y/o consulta no dude en contactarnos.</b>
+                    </div>
+                </div>
+                <!-- Fin Presentación -->
 
-            <div class="centrado mrt30">
-                <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
-                        alt="whatsapp"><b>CONTACTANOS</b></a>
-            </div>
+                <!-- btn Contactanos -->
+                <div class="centrado mrt30">
+                    <a class="btn btn-dark"
+                        href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+                        target="_blank"><img class="ico" src="/img/iconos/whatsapp.png"
+                            alt="whatsapp"><b>CONTACTANOS</b></a>
+                </div>
+                <!-- Fin btn Contactanos -->
 
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante crecimiento,
-                    ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados. Nuestro
-                    equipo de profesionales altamente capacitados y experimentados está preparado para abordar cualquier
-                    situación con respuestas rápidas y eficientes.</h4>
-            </div>
-            <!-- Fin Presentación -->
-
-            <div class="contenedor-cards">
-                <div class="centrado cards">
-                    <div class="" id="luminarias">
-                        <div class="mr10">
+                <!-- Cards -->
+                <div class="contenedor-cards mrt30">
+                    <div class="centrado cards">
+                        <div class="mr10" id="luminarias">
                             <img class="img-tarjetas mrt10" src="/img/electricidad/luminarias.png" alt="luminarias">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="tomas">
-                        <div class="mr10">
+                        <div class="mr10" id="tomas">
                             <img class="img-tarjetas mrt10" src="/img/electricidad/tomas.png" alt="tomas">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="tableros">
-                        <div class="mr10">
+                        <div class="mr10" id="tableros">
                             <img class="img-tarjetas mrt10" src="/img/electricidad/tableros.png" alt="tableros">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="porteros">
-                        <div class="mr10">
+                        <div class="mr10" id="porteros">
                             <img class="img-tarjetas mrt10" src="/img/electricidad/porteros.png" alt="porteros">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="termotanques">
-                        <div class="mr10">
+                        <div class="mr10" id="termotanques">
                             <img class="img-tarjetas mrt10" src="/img/electricidad/termotanques.png" alt="termotanques">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="ventiladores">
-                        <div class="mr10">
+                        <div class="mr10" id="ventiladores">
                             <img class="img-tarjetas mrt10" src="/img/electricidad/ventilador.png" alt="ventiladores">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="aires">
-                        <div class="mr10">
+                        <div class="mr10" id="aires">
                             <img class="img-tarjetas mrt10" src="/img/electricidad/aires.png" alt="aires">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Fin Cards -->
+
+                <!-- btn Pedir Presupuesto -->
+                <div class="centrado mrt30">
+                    <a class="btn btn-dark"
+                        href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+                        target="_blank"><img class="ico" src="/img/iconos/whatsapp.png"
+                            alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                </div>
+                <!-- Fin btn Pedir Presupuesto -->
+
+                <div class="presentacion mrt30">
+                    <h5 class="text-indent justify">Nos especializamos en hacer realidad tus proyectos,
+                        brindándote soluciones integrales y de calidad.</h5>
+                    <br>
+                    <h5 class="text-indent justify"><b>Solicite presupuesto Sin Cargo.</b> Estamos para ayudarlo con
+                        cualquier duda y/o consulta que tenga.</h5>
+                </div>
             </div>
-
-            <!-- Fin Cards -->
-
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify">En <b>LFConstrucciones</b>, realizamos servicios para empresas y
-                    particulares. Estamos capacitados para brindar soluciones eficaces y de alta calidad. Años de
-                    experiencia nos avalan. </h4>
-            </div>
-
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify">Trabajamos con diseño propio y <b>Garantía Escrita.</b> Solicité
-                    presupuesto <b>Sin Cargo.</b> Estamos para ayudarlo con cualquier duda y/o consulta que tenga.</h4>
-            </div>
-
         </div>
+
+        <!-- WhatsApp Fixed -->
+        <a href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+            target="_blank"><img class="img-wst-green" src="/img/whatsapp-green.png" alt="whatsapp"></a>
+        <!-- Fin WhatsApp Fixed -->
+
     </main>
 
     <!-- <<< ----------- * ----------- Fin Main ----------- * ----------- >>> -->
