--- a/hormigon.html
+++ b/hormigon.html
@@ -30,6 +30,7 @@
                     <p class="text-menu">Hormigón</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/hormigon.html"><b>Hormigón</b></a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#losas">Losas</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#encadenado">Encadenados</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#vigas">Vigas</a></li>
@@ -48,6 +49,7 @@
                     <p class="text-menu">Herrería</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/herreria.html"><b>Herrería</b></a></li>
                     <li><a class="dropdown-item" href="/herreria.html#portones">Portones</a></li>
                     <li><a class="dropdown-item" href="/herreria.html#rejas">Rejas</a></li>
                     <li><a class="dropdown-item" href="/herreria.html#escaleras">Escaleras</a></li>
@@ -64,6 +66,7 @@
                     <p class="text-menu">Techos</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/techos.html"><b>Techos</b></a></li>
                     <li><a class="dropdown-item" href="/techos.html#tejas">Teja</a></li>
                     <li><a class="dropdown-item" href="/techos.html#chapa">Chapa</a></li>
                 </ul>
@@ -75,6 +78,7 @@
                     <p class="text-menu">Pintura</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/pintura.html"><b>Pintura</b></a></li>
                     <li><a class="dropdown-item" href="/pintura.html#exterior">Exterior</a></li>
                     <li><a class="dropdown-item" href="/pintura.html#interior">Interior</a></li>
                     <li><a class="dropdown-item" href="/pintura.html#impermeabilizacion">Impermeabilización</a></li>
@@ -88,7 +92,7 @@
                     <p class="text-menu">Plomería</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/plomeria.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html"><b>Plomería</b></a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#tanques">Tanques</a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#cisternas">Cisternas</a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#centrifugas">Bombas Centrifugas</a></li>
@@ -109,7 +113,7 @@
                     <p class="text-menu">Electricidad</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/electricidad.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html"><b>Electricidad</b></a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#luminarias">Luminarias</a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#tomas">Toma Corriente</a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#tableros">Tableros</a></li>
@@ -206,7 +210,7 @@
                         hormigones y morteros. Con más de 10 años de experiencia, utilizamos equipamiento de
                         última generación.</h5>
                     <br>
-                    <h5 class="text-indent justify">Nuestro equipo altamente capacitado y el uso de materias primas de
+                    <h5 class="text-indent justify">Nuestro equipo altamente capacitado y el uso de materiales de
                         alta calidad nos permiten ofrecer producto superior, garantizando los más altos estándares de
                         calidad
                         y servicio.</h5>
@@ -217,10 +221,14 @@
             </div>
             <!-- Fin Presentación -->
 
-            <div class="centrado mr50">
-                <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
+            <!-- btn Contactanos -->
+            <div class="centrado mrt30">
+                <a class="btn btn-dark"
+                    href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+                    target="_blank"><img class="ico" src="/img/iconos/whatsapp.png"
                         alt="whatsapp"><b>CONTACTANOS</b></a>
             </div>
+            <!-- Fin btn Contactanos -->
 
             <div class="container mrt30">
 
@@ -256,24 +264,34 @@
                         </div>
                     </div>
                 </div>
+
+
+                <!-- Fin Cards -->
+
+                <!-- btn Pedir Presupuesto -->
+                <div class="centrado mrt30">
+                    <a class="btn btn-dark"
+                        href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+                        target="_blank"><img class="ico" src="/img/iconos/whatsapp.png" alt="whatsapp"><b>PEDIR
+                            PRESUPUESTO</b></a>
+                </div>
+                <!-- Fin btn Pedir Presupuesto -->
+
+                <div class="presentacion mrt30">
+                    <h5 class="text-indent justify">Nos especializamos en hacer realidad tus proyectos de construcción,
+                        brindándote soluciones integrales y de calidad.</h5>
+                    <br>
+                    <h5 class="text-indent justify"><b>Solicite presupuesto Sin Cargo.</b> Estamos para ayudarlo con
+                        cualquier duda y/o consulta que tenga.</h5>
+                </div>
+
             </div>
-
-            <!-- Fin Cards -->
-
-            <div class="centrado mrt30">
-                <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png" alt="whatsapp"><b>PEDIR
-                        PRESUPUESTO</b></a>
-            </div>
-
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify">Nos especializamos en hacer realidad tus proyectos de construcción,
-                    brindándote soluciones integrales y de calidad.</h5>
-                <br>
-                <h5 class="text-indent justify"><b>Solicite presupuesto Sin Cargo.</b> Estamos para ayudarlo con
-                    cualquier duda y/o consulta que tenga.</h5>
-            </div>
-
         </div>
+        <!-- WhatsApp Fixed -->
+        <a href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+            target="_blank"><img class="img-wst-green" src="/img/whatsapp-green.png" alt="whatsapp"></a>
+        <!-- Fin WhatsApp Fixed -->
+
     </main>
 
     <!-- <<< ----------- * ----------- Fin Main ----------- * ----------- >>> -->
