--- a/pintura.html
+++ b/pintura.html
@@ -30,6 +30,7 @@
                     <p class="text-menu">Hormigón</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/hormigon.html"><b>Hormigón</b></a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#losas">Losas</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#encadenado">Encadenados</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#vigas">Vigas</a></li>
@@ -48,6 +49,7 @@
                     <p class="text-menu">Herrería</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/herreria.html"><b>Herrería</b></a></li>
                     <li><a class="dropdown-item" href="/herreria.html#portones">Portones</a></li>
                     <li><a class="dropdown-item" href="/herreria.html#rejas">Rejas</a></li>
                     <li><a class="dropdown-item" href="/herreria.html#escaleras">Escaleras</a></li>
@@ -64,6 +66,7 @@
                     <p class="text-menu">Techos</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/techos.html"><b>Techos</b></a></li>
                     <li><a class="dropdown-item" href="/techos.html#tejas">Teja</a></li>
                     <li><a class="dropdown-item" href="/techos.html#chapa">Chapa</a></li>
                 </ul>
@@ -75,6 +78,7 @@
                     <p class="text-menu">Pintura</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/pintura.html"><b>Pintura</b></a></li>
                     <li><a class="dropdown-item" href="/pintura.html#exterior">Exterior</a></li>
                     <li><a class="dropdown-item" href="/pintura.html#interior">Interior</a></li>
                     <li><a class="dropdown-item" href="/pintura.html#impermeabilizacion">Impermeabilización</a></li>
@@ -88,7 +92,7 @@
                     <p class="text-menu">Plomería</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/plomeria.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html"><b>Plomería</b></a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#tanques">Tanques</a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#cisternas">Cisternas</a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#centrifugas">Bombas Centrifugas</a></li>
@@ -109,7 +113,7 @@
                     <p class="text-menu">Electricidad</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/electricidad.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html"><b>Electricidad</b></a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#luminarias">Luminarias</a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#tomas">Toma Corriente</a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#tableros">Tableros</a></li>
@@ -203,15 +207,13 @@
                 </div>
                 <!-- Fin Imagen Principal -->
 
-
-
                 <div class="presentacion mrt30">
                     <h5 class="text-indent justify">En <b>LFConstrucciones</b>, contamos con personal altamente
                         capacitado en la realización de <b>Pintura Exterior, Interior e Impermeabilización.</b>
                         Realizamos <b>Trabajos en Altura.</b> Contamos con más de
                         10 años de experiencia en el rubro.</h5>
                     <br>
-                    <h5 class="text-indent justify">Nuestro equipo altamente capacitado y el uso de materias primas
+                    <h5 class="text-indent justify">Nuestro equipo altamente capacitado y el uso de materiales 
                         de
                         alta calidad nos permiten ofrecer un servicio superior, garantizando los más altos estándares
                         de
@@ -223,10 +225,14 @@
             </div>
             <!-- Fin Presentación -->
 
+            <!-- btn Contactanos -->
             <div class="centrado mrt30">
-                <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
+                <a class="btn btn-dark"
+                    href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+                    target="_blank"><img class="ico" src="/img/iconos/whatsapp.png"
                         alt="whatsapp"><b>CONTACTANOS</b></a>
             </div>
+            <!-- Fin btn Contactanos -->
 
             <div class="container mrt30">
 
@@ -234,17 +240,17 @@
                 <div class="contenedor-cards mrt30">
                     <div class="centrado cards">
                         <div class="mr10" id="exterior">
-                                <img class="img-tarjetas mrt10" src="/img/pintura/exterior.png" alt="exterior">
+                            <img class="img-tarjetas mrt10" src="/img/pintura/exterior.png" alt="exterior">
                         </div>
                         <div class="mr10" id="interior">
-                                <img class="img-tarjetas mrt10" src="/img/pintura/interior.png" alt="interior">
+                            <img class="img-tarjetas mrt10" src="/img/pintura/interior.png" alt="interior">
                         </div>
                         <div class="mr10" id="impermeabilizacion">
-                                <img class="img-tarjetas mrt10" src="/img/pintura/impermeabilizacion.png"
-                                    alt="impermeabilizacion">
+                            <img class="img-tarjetas mrt10" src="/img/pintura/impermeabilizacion.png"
+                                alt="impermeabilizacion">
                         </div>
                         <div class="mr10" id="altura">
-                                <img class="img-tarjetas mrt10" src="/img/pintura/altura.png" alt="altrura">
+                            <img class="img-tarjetas mrt10" src="/img/pintura/altura.png" alt="altrura">
                         </div>
                     </div>
                 </div>
@@ -252,11 +258,14 @@
 
                 <!-- Fin Cards -->
 
+                <!-- btn Pedir Presupuesto -->
                 <div class="centrado mrt30">
-                    <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
-                            alt="whatsapp"><b>PEDIR
+                    <a class="btn btn-dark"
+                        href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+                        target="_blank"><img class="ico" src="/img/iconos/whatsapp.png" alt="whatsapp"><b>PEDIR
                             PRESUPUESTO</b></a>
                 </div>
+                <!-- Fin btn Pedir Presupuesto -->
 
                 <div class="presentacion mrt30">
                     <h5 class="text-indent justify">Nos especializamos en hacer realidad tus proyectos de Pintura,
@@ -267,6 +276,12 @@
                 </div>
             </div>
         </div>
+
+        <!-- WhatsApp Fixed -->
+        <a href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+            target="_blank"><img class="img-wst-green" src="/img/whatsapp-green.png" alt="whatsapp"></a>
+        <!-- Fin WhatsApp Fixed -->
+
     </main>
 
     <!-- <<< ----------- * ----------- Fin Main ----------- * ----------- >>> -->
