--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -30,6 +30,7 @@
                     <p class="text-menu">Hormigón</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/hormigon.html"><b>Hormigón</b></a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#losas">Losas</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#encadenado">Encadenados</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#vigas">Vigas</a></li>
@@ -48,6 +49,7 @@
                     <p class="text-menu">Herrería</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/herreria.html"><b>Herrería</b></a></li>
                     <li><a class="dropdown-item" href="/herreria.html#portones">Portones</a></li>
                     <li><a class="dropdown-item" href="/herreria.html#rejas">Rejas</a></li>
                     <li><a class="dropdown-item" href="/herreria.html#escaleras">Escaleras</a></li>
@@ -64,6 +66,7 @@
                     <p class="text-menu">Techos</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/techos.html"><b>Techos</b></a></li>
                     <li><a class="dropdown-item" href="/techos.html#tejas">Teja</a></li>
                     <li><a class="dropdown-item" href="/techos.html#chapa">Chapa</a></li>
                 </ul>
@@ -75,6 +78,7 @@
                     <p class="text-menu">Pintura</p>
                 </div>
                 <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/pintura.html"><b>Pintura</b></a></li>
                     <li><a class="dropdown-item" href="/pintura.html#exterior">Exterior</a></li>
                     <li><a class="dropdown-item" href="/pintura.html#interior">Interior</a></li>
                     <li><a class="dropdown-item" href="/pintura.html#impermeabilizacion">Impermeabilización</a></li>
@@ -88,7 +92,7 @@
                     <p class="text-menu">Plomería</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/plomeria.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html"><b>Plomería</b></a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#tanques">Tanques</a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#cisternas">Cisternas</a></li>
                     <li><a class="dropdown-item" href="/plomeria.html#centrifugas">Bombas Centrifugas</a></li>
@@ -109,7 +113,7 @@
                     <p class="text-menu">Electricidad</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/electricidad.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html"><b>Electricidad</b></a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#luminarias">Luminarias</a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#tomas">Toma Corriente</a></li>
                     <li><a class="dropdown-item" href="/electricidad.html#tableros">Tableros</a></li>
@@ -191,47 +195,67 @@
     <main>
 
 
-        <div class="presentacion">
+        <!-- Presentación -->
+        <div class="w-100">
+            <div class="container">
 
-            <!-- Presentación -->
-            <h1 class="centrado mrt30">Sobre Nosotros</h1>
+                <div class="cont-presentacion">
 
-            <!-- Imagen Principal -->
-            <div class="centrado mrt30">
-                <img class="img-principal" src="/img/planificacion.png" alt="img-principal">
+                    <!-- Imagen Principal -->
+                    <div class="centrado mrt30">
+                        <img class="img-principal-logo" src="/img/logo-ok.png" alt="LOGO">
+                    </div>
+                    <!-- Fin Imagen Principal -->
+
+                    <div class="presentacion mrt30">
+                        <h1 class="centrado">Sobre Nosotros</h1>
+                        <br>
+                        <h5 class="text-indent justify"><b>LFConstrucciones</b> es una empresa <b>Argentina con Alma de
+                                Paraguayos.</b> Somos una empresa en constante crecimiento,
+                            ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados.
+                            Nuestro
+                            equipo de profesionales altamente capacitados y experimentados está preparado para abordar
+                            cualquier situación con respuestas rápidas y eficientes.</h5>
+                        <br>
+                        <h5 class="text-indent justify"><b>Realizamos obras llave en mano</b> y todos los
+                            servicios derivados de la construcción como <b>Hormigón, Herrería, Techos, Pintura, Plomería
+                                y
+                                Electricidad.</b> Ofreciendo una respuesta rápida a sus necesicidades.</h5>
+                        <br>
+                        <h5 class="text-indent justify"><b>Ante cualquier duda y/o consulta no dude en contactarnos.</b>
+                        </h5>
+                    </div>
+                </div>
+                <!-- Fin Presentación -->
+
+                <!-- Contratista -->
+                <div class="centrado mrt30">
+                    <div class="cont-contratista">
+                        <img class="img-contratista" src="/img/odulio.png" alt="odulio">
+                    </div>
+                    <h5>Dirección de Obra y Ejecución</h5>
+                    <h3>Odulio Fariña</h3>
+                    <h5>Maestro Mayor de Obra</h5>
+                </div>
+                <!-- Fin Contratista -->
+
+                <!-- btn Contactanos -->
+                <div class="centrado mrt30">
+                    <a class="btn btn-dark"
+                        href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+                        target="_blank"><img class="ico" src="/img/iconos/whatsapp.png"
+                            alt="whatsapp"><b>CONTACTANOS</b></a>
+                </div>
+                <!-- Fin btn Contactanos -->
+
             </div>
-            <!-- Fin Imagen Principal -->
 
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante crecimiento,
-                    ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados. Nuestro
-                    equipo de profesionales altamente capacitados y experimentados está preparado para abordar
-                    cualquier
-                    situación con respuestas rápidas y eficientes.</h4>
-            </div>
-
-            <div class="centrado mrt30">
-                <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
-                        alt="whatsapp"><b>CONTACTANOS</b></a>
-            </div>
-
+            <!-- WhatsApp Fixed -->
+            <a href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+                target="_blank"><img class="img-wst-green" src="/img/whatsapp-green.png" alt="whatsapp"></a>
+            <!-- Fin WhatsApp Fixed -->
         </div>
-        <!-- Fin Presentación -->
 
-        <div class="container">
-
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify">En <b>LFConstrucciones</b>, realizamos servicios para empresas y
-                    particulares. Estamos capacitados para brindar soluciones eficaces y de alta calidad. Años de
-                    experiencia nos avalan. </h4>
-            </div>
-
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify">Trabajamos con diseño propio y <b>Garantía Escrita.</b> Solicité
-                    presupuesto <b>Sin Cargo.</b> Estamos para ayudarlo con cualquier duda y/o consulta que tenga.</h4>
-            </div>
-
-        </div>
     </main>
 
     <!-- <<< ----------- * ----------- Fin Main ----------- * ----------- >>> -->
@@ -253,6 +277,7 @@
             <a class="dev" target="_blank" href="https://elavinchoweb.netlify.app/">Powered by <b>elavinchodev</b></a>
         </div>
 
+        </div>
     </footer>
     <!-- <<< ----------- * ----------- Fin Footer ----------- * ----------- >>> -->
 
