--- a/electricidad.html
+++ b/electricidad.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LFConstrucciones</title>
+    <!-- Favicon-->
+    <link rel="icon" type="icon" href="/img/logo.ico"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -123,13 +126,12 @@
                     <li><a class="dropdown-item" href="/electricidad.html#aires">Aire Acondicionado</a></li>
                 </ul>
             </div>
-
-            <div class="btn dropdown">
+            <!-- <div class="btn dropdown">
                 <a href="/galeria.html">
                     <img class="img-ico" src="/img/iconos/galeria.png" alt="galeria">
                     <p class="text-menu">Galería</p>
                 </a>
-            </div>
+            </div> -->
             <div class="btn dropdown">
                 <a href="/sobreNosotros.html">
                     <img class="img-ico" src="/img/iconos/nosotros.png" alt="nosotros">
@@ -178,8 +180,8 @@
                             alt="grifo">Plomería</a></li>
                 <li><a href="/electricidad.html" class="dos-columnas"><img class="img-ico"
                             src="/img/iconos/electricidad.png" alt="electricidad">Electricidad</a></li>
-                <li><a href="/galeria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/galeria.png"
-                            alt="galeria">Galería</a></li>
+                <!-- <li><a href="/galeria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/galeria.png"
+                            alt="galeria">Galería</a></li> -->
                 <li><a href="/sobreNosotros.html" class="dos-columnas"><img class="img-ico"
                             src="/img/iconos/nosotros.png" alt="nosotros">Sobre Nosotros</a></li>
                 <li><a href="/contacto.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/atcliente.png"
@@ -192,47 +194,47 @@
 
     <!-- <<< ----------- * ----------- Fin Header Celular ----------- * ----------- >>> -->
     <main>
+        <h1 class="centrado mrt30">Electricidad</h1>
+
+        <!-- Presentación -->
         <div class="w-100">
-            <div class="container">
+            <div class="cont-presentacion">
 
-                <h1 class="centrado mrt30">Electricidad</h1>
-
-                <!-- Presentación -->
-                <div class="cont-presentacion">
-
-                    <!-- Imagen Principal -->
-                    <div class="centrado mrt30">
-                        <img class="img-principal" src="/img/electricidad.jpg" alt="img-principal">
-                    </div>
-                    <!-- Fin Imagen Principal -->
-
-                    <div class="presentacion mrt30">
-                        <h5 class="text-indent justify">En <b>LFConstrucciones</b>, contamos con Electricistas altamente
-                            capacitados en la <b>Instalación de Luminarias, Toma Corrientes, Tableros, Porteros
-                                Electricos, Termo Tanques</b>, además de <b>Instalaciones de Ventiladores de Techo y
-                                Aires Acondicionados.</b> Contamos con más de
-                            10 años de experiencia en el rubro.</h5>
-                        <br>
-                        <h5 class="text-indent justify">Nuestro equipo altamente capacitado y el uso de materiales
-                            de
-                            alta calidad nos permiten ofrecer un servicio superior, garantizando los más altos
-                            estándares
-                            de
-                            calidad.</h5>
-                        <br>
-                        <h5 class="text-indent justify"><b>Ante cualquier duda y/o consulta no dude en contactarnos.</b>
-                    </div>
-                </div>
-                <!-- Fin Presentación -->
-
-                <!-- btn Contactanos -->
+                <!-- Imagen Principal -->
                 <div class="centrado mrt30">
-                    <a class="btn btn-dark"
-                        href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
-                        target="_blank"><img class="ico" src="/img/iconos/whatsapp.png"
-                            alt="whatsapp"><b>CONTACTANOS</b></a>
+                    <img class="img-principal animate__animated animate__bounceInLeft" src="/img/electricidad.jpg" alt="img-principal">
                 </div>
-                <!-- Fin btn Contactanos -->
+                <!-- Fin Imagen Principal -->
+
+                <div class="presentacion mrt30 animate__animated animate__bounceInRight">
+                    <h5 class="text-indent justify">En <b>LFConstrucciones</b>, contamos con Electricistas altamente
+                        capacitados en la <b>Instalación de Luminarias, Toma Corrientes, Tableros, Porteros
+                            Electricos, Termo Tanques</b>, además de <b>Instalaciones de Ventiladores de Techo y
+                            Aires Acondicionados.</b> Contamos con más de
+                        10 años de experiencia en el rubro.</h5>
+                    <br>
+                    <h5 class="text-indent justify">Nuestro equipo altamente capacitado y el uso de materiales
+                        de
+                        alta calidad nos permiten ofrecer un servicio superior, garantizando los más altos
+                        estándares
+                        de
+                        calidad.</h5>
+                    <br>
+                    <h5 class="text-indent justify"><b>Ante cualquier duda y/o consulta no dude en contactarnos.</b>
+                </div>
+            </div>
+            <!-- Fin Presentación -->
+
+            <!-- btn Contactanos -->
+            <div class="centrado mrt30">
+                <a class="btn btn-dark"
+                    href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
+                    target="_blank"><img class="ico" src="/img/iconos/whatsapp.png"
+                        alt="whatsapp"><b>CONTACTANOS</b></a>
+            </div>
+            <!-- Fin btn Contactanos -->
+
+            <div class="container mrt30">
 
                 <!-- Cards -->
                 <div class="contenedor-cards mrt30">
@@ -267,8 +269,8 @@
                 <div class="centrado mrt30">
                     <a class="btn btn-dark"
                         href="https://api.whatsapp.com/send?phone=5491162808114&text=%20[Web]%20Hola%2C%20quisiera%20pedir%20un%20presupuesto"
-                        target="_blank"><img class="ico" src="/img/iconos/whatsapp.png"
-                            alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                        target="_blank"><img class="ico" src="/img/iconos/whatsapp.png" alt="whatsapp"><b>PEDIR
+                            PRESUPUESTO</b></a>
                 </div>
                 <!-- Fin btn Pedir Presupuesto -->
 
