--- a/pintura.html
+++ b/pintura.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LFConstrucciones</title>
+    <!-- Favicon-->
+    <link rel="icon" type="icon" href="/img/logo.ico"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -123,13 +126,12 @@
                     <li><a class="dropdown-item" href="/electricidad.html#aires">Aire Acondicionado</a></li>
                 </ul>
             </div>
-
-            <div class="btn dropdown">
+            <!-- <div class="btn dropdown">
                 <a href="/galeria.html">
                     <img class="img-ico" src="/img/iconos/galeria.png" alt="galeria">
                     <p class="text-menu">Galería</p>
                 </a>
-            </div>
+            </div> -->
             <div class="btn dropdown">
                 <a href="/sobreNosotros.html">
                     <img class="img-ico" src="/img/iconos/nosotros.png" alt="nosotros">
@@ -178,8 +180,8 @@
                             alt="grifo">Plomería</a></li>
                 <li><a href="/electricidad.html" class="dos-columnas"><img class="img-ico"
                             src="/img/iconos/electricidad.png" alt="electricidad">Electricidad</a></li>
-                <li><a href="/galeria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/galeria.png"
-                            alt="galeria">Galería</a></li>
+                <!-- <li><a href="/galeria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/galeria.png"
+                            alt="galeria">Galería</a></li> -->
                 <li><a href="/sobreNosotros.html" class="dos-columnas"><img class="img-ico"
                             src="/img/iconos/nosotros.png" alt="nosotros">Sobre Nosotros</a></li>
                 <li><a href="/contacto.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/atcliente.png"
@@ -203,11 +205,11 @@
 
                 <!-- Imagen Principal -->
                 <div class="centrado mrt30">
-                    <img class="img-principal" src="/img/pintura.jpg" alt="img-principal">
+                    <img class="img-principal animate__animated animate__bounceInLeft" src="/img/pintura.jpg" alt="img-principal">
                 </div>
                 <!-- Fin Imagen Principal -->
 
-                <div class="presentacion mrt30">
+                <div class="presentacion mrt30 animate__animated animate__bounceInRight">
                     <h5 class="text-indent justify">En <b>LFConstrucciones</b>, contamos con personal altamente
                         capacitado en la realización de <b>Pintura Exterior, Interior e Impermeabilización.</b>
                         Realizamos <b>Trabajos en Altura.</b> Contamos con más de
